@@ -12,6 +12,7 @@
 - fixed `String.args()` for evaluting keys with `$` character
 - fixed `ul` parsing in the Markdown parser
 - added a new method `FlowInstance.remove()`
+- improved exporting Flow schema
 
 ========================
 0.0.94
